# packages

logistic-lib-main/logistic_regression/: LICENSE  setup.cfg
logistic-lib-main/logistic_regression/logistic_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
puz_pck/: README.md  pyproject.toml  setup.cfg
puz_pck/Puzzles.egg-info/: PKG-INFO  SOURCES.txt
puz_pck/logistic_lib.egg-info/: PKG-INFO  SOURCES.txt
