[metadata]
name = logistic-lib
version = 0.0.1
author = Asmaa_khorkhash
author_email = asmaakhorkhash@gmail.com
description = doing logistic-algorthim at dataset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Asmaa-khorkhash/logistic-lib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
include_package_data = True
